tests/ui/type_checker/ok/variables.aru
func foo(): (int, bool) {
    return 10, true
}

func main() {
    let a: int = 10
    let b: float = 3.14
    let c: bool = true
    let d: str = "hello"
    
    // Destructuring binding
    let a2, b2 = foo()
}
