tests/ui/type_checker/invalid/result_not_handled.aru
func openConfig(): Result<str, Err> {
    return Result.Ok("config")
}

func main() {
    let config = openConfig()
}
